# uc-postgres-duckdb-dbt-analytics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  readme.md
.claude/agents/: dbt-architect.md  dbt-developer.md  duckdb-architect.md  duckdb-developer.md  fastapi-architect.md  fastapi-developer.md  mcp-architect.md  mcp-developer.md
.claude/kb/: _index.yaml
.claude/kb/dbt/: quick-reference.md
.claude/kb/duckdb/: quick-reference.md
.claude/kb/fastapi/: quick-reference.md
.claude/kb/mcp/: quick-reference.md
.claude/rules/: repo-invariants.md
.kimi/: .session
.kimi/state/: warnings.jsonl
platform/landing/: __init__.py  cli.py  ingest.py
platform/warehouse/: paths.py
presentation/: brd-analytical-backbone-doc.html  brd-analytical-backbone.html  harness-engineering.html
prompts/: README.md  p1-intent.md  p2-structure.md  p3-decomposition.md  p4-consensus.md  p5-tasking.md  p6-harness.md  p7-execution.md
sketch/: duckdb-dbt-med-arch.plan  fast-api-mcp.plan
src/: README.md
src/db/: 01_schema.sql  connection.py
src/seed/: factories.py  seed.py
src/transition/: README.md  __init__.py  cli.py  ingest.py
src/warehouse/: README.md  __init__.py  connection.py  paths.py
tasks/: T-20260625-api-fastapi.md  T-20260625-bronze-views.md  T-20260625-gold-atomic-publish.md  T-20260625-gold-freshness.md  T-20260625-gold-marts.md  T-20260625-mcp-tools.md  T-20260625-silver-conform.md  _metrics.jsonl  _state.yaml
transform/: dbt_project.yml  profiles.yml
transform/models/: sources.yml
(+36 files in other folders)
